[fix] text wrap and font size smaller

--- a/src/main/resources/css/canvas.css
+++ b/src/main/resources/css/canvas.css
@@ -81,6 +81,7 @@
 
 #lblWord{
     -fx-text-fill: #4185F4;
+    -fx-font-size: 20px;
 }
 
 #lblTime{
